--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout Nebula
         uses: actions/checkout@v2
         with:
-          repository: TeamKun/NumaNebula
+          repository: TeamKun/ModNebula
 
       - name: Checkout Packs
         uses: actions/checkout@v2
