--- a/servers/Pack29-1.16.5/forgemods/required/ocean_expansion_1.16.5_Release_3.1.0.link.json
+++ b/servers/Pack29-1.16.5/forgemods/required/ocean_expansion_1.16.5_Release_3.1.0.link.json
@@ -1,5 +1,5 @@
 {
-    "id": "net.mcreator.oceanexpansion:ocean_expansion.jar:3.1.0@jar",
+    "id": "net.mcreator.oceanexpansion:ocean_expansion:3.1.0@jar",
     "name": "The Ocean Expansion",
     "type": "ForgeMod",
     "artifact": {
