--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: TeamKun/ModNebula
-
+          ref: merge
       - name: Checkout Packs
         uses: actions/checkout@v2
         with:
