--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           repository: TeamKun/ModNebula
           ref: merge
+
       - name: Checkout Packs
         uses: actions/checkout@v2
         with:
@@ -34,11 +35,11 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: '18.x'
 
       - uses: actions/setup-java@v1
         with:
-          java-version: '8'
+          java-version: '17'
           java-package: jre
           architecture: x64
 
@@ -48,7 +49,6 @@ jobs:
       - name: Setup Nebula
         run: |
           npm i
-          npm build ./
           npm run build
 
       - name: Generate Distribution
@@ -59,6 +59,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git add -f distribution.json
+          git add .
           git commit -m "Auto-Generate Nebula Distribution" -a
 
       - name: Git push changes
