--- a/servers/MODSurvival-1.20.1/forgemods/optionaloff/DungeonsArise-1.20.x-2.1.58-release.jar.link.json
+++ b/servers/MODSurvival-1.20.1/forgemods/optionaloff/DungeonsArise-1.20.x-2.1.58-release.jar.link.json
@@ -8,7 +8,7 @@
     "url": "",
     "manual": {
       "url": "https://www.curseforge.com/minecraft/mc-mods/when-dungeons-arise/download/4983862",
-      "name": "[DungeonsArise-1.20.x-2.1.58-release.jar"
+      "name": "DungeonsArise-1.20.x-2.1.58-release.jar"
     }
   }
 }
