--- a/servers/MODSurvival-1.20.1/forgemods/optionaloff/DungeonsArise-1.20.1-2.1.57-release.jar.link.json
+++ b/servers/MODSurvival-1.20.1/forgemods/optionaloff/DungeonsArise-1.20.1-2.1.57-release.jar.link.json
@@ -1,5 +1,5 @@
 {
-  "id": "net.aurelj:dungeons_arise:2.1.57-1.20.1.x@jar",
+  "id": "net.aurelj:dungeons_arise:2.1.57-1.20.1@jar",
   "name": "When Dungeons Arise",
   "type": "ForgeMod",
   "artifact": {
