--- a/servers/MODSurvival-1.20.1/forgemods/optionaloff/DungeonsArise-1.20.x-2.1.58-release.jar.link.json
+++ b/servers/MODSurvival-1.20.1/forgemods/optionaloff/DungeonsArise-1.20.x-2.1.58-release.jar.link.json
@@ -1,14 +1,14 @@
 {
-  "id": "net.aurelj:dungeons_arise:2.1.57-1.20.1@jar",
+  "id": "net.aurelj:dungeons_arise:2.1.58-1.20.x@jar",
   "name": "When Dungeons Arise",
   "type": "ForgeMod",
   "artifact": {
-    "size": 8579488,
-    "MD5": "d41d8cd98f00b204e9800998ecf8427e",
+    "size": 8762342,
+    "MD5": "6ac48d0cf2ce763824f96f6d26963219",
     "url": "",
     "manual": {
       "url": "https://www.curseforge.com/minecraft/mc-mods/when-dungeons-arise/download/4983862",
-      "name": "DungeonsArise-1.20.1-2.1.57-release.jar"
+      "name": "DungeonsArise-1.20.x-2.1.58-release.jar"
     }
   }
 }
